--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hexagon Tool Kit",
+  "name": "hextk",
   "repository": "https://github.com/IonPostglacial/htk.git",
   "version": "0.0.1",
   "description": "An HTML Components Tool Kit",
@@ -9,15 +9,16 @@
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "browserify": "^13.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
     "gulp-sourcemaps": "^1.6.0",
     "st": "^1.1.0",
-    "gulp-livereload": "^3.8.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
