--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "hextk",
   "repository": "https://github.com/IonPostglacial/htk.git",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "An HTML Components Tool Kit",
-  "main": "dist/htk.js",
+  "main": "dist/index.js",
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
@@ -11,14 +11,8 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
-    "gulp-livereload": "^3.8.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "st": "^1.1.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-babel": "^6.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
